--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "git://github.com/gruntjs/grunt.git",
+    "grunt-contrib-exec": "git://github.com/jharding/grunt-exec.git#dev-arguments",
     "grunt-contrib-watch": "git://github.com/gruntjs/grunt-contrib-watch.git",
     "grunt-contrib-jshint": "git://github.com/gruntjs/grunt-contrib-jshint.git",
-    "grunt-contrib-uglify": "git://github.com/gruntjs/grunt-contrib-uglify.git"
+    "grunt-contrib-uglify": "git://github.com/gruntjs/grunt-contrib-uglify.git",
+    "grunt-contrib-jasmine": "git://github.com/gruntjs/grunt-contrib-jasmine.git"
   },
   "scripts": {
     "test": "open test/SpecRunner.html"
