--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "grunt-contrib-watch": "git://github.com/gruntjs/grunt-contrib-watch.git",
     "grunt-contrib-jshint": "git://github.com/gruntjs/grunt-contrib-jshint.git",
     "grunt-contrib-uglify": "git://github.com/gruntjs/grunt-contrib-uglify.git",
-    "grunt-contrib-jasmine": "git://github.com/gruntjs/grunt-contrib-jasmine.git"
+    "grunt-contrib-jasmine": "git://github.com/gruntjs/grunt-contrib-jasmine.git",
+    "grunt-cli": "~0.1.6"
   },
   "scripts": {
-    "test": "open test/SpecRunner.html"
+    "test": "grunt test"
   }
 }
