--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "git://github.com/gruntjs/grunt.git",
-    "grunt-contrib-exec": "git://github.com/jharding/grunt-exec.git#dev-arguments",
+    "grunt-contrib-exec": "git://github.com/jharding/grunt-exec.git#grunt0.4rc",
     "grunt-contrib-watch": "git://github.com/gruntjs/grunt-contrib-watch.git",
     "grunt-contrib-jshint": "git://github.com/gruntjs/grunt-contrib-jshint.git",
     "grunt-contrib-uglify": "git://github.com/gruntjs/grunt-contrib-uglify.git",
