--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "git://github.com/gruntjs/grunt.git",
-    "grunt-contrib-exec": "git://github.com/jharding/grunt-exec.git#grunt0.4rc",
-    "grunt-contrib-watch": "git://github.com/gruntjs/grunt-contrib-watch.git",
-    "grunt-contrib-jshint": "git://github.com/gruntjs/grunt-contrib-jshint.git",
-    "grunt-contrib-uglify": "git://github.com/gruntjs/grunt-contrib-uglify.git",
-    "grunt-contrib-jasmine": "git://github.com/gruntjs/grunt-contrib-jasmine.git",
-    "grunt-cli": "~0.1.6"
+    "grunt": "0.4.0rc7",
+    "grunt-cli": "~0.1.6",
+    "grunt-sed": "0.0.0",
+    "grunt-exec": "0.4.0rc1",
+    "grunt-contrib-watch": "0.2.0rc7",
+    "grunt-contrib-jshint": "0.1.1rc6",
+    "grunt-contrib-uglify": "0.1.1rc6",
+    "grunt-contrib-jasmine": "0.3.1rc7"
   },
   "scripts": {
     "test": "grunt test"
