--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "0.4.0rc7",
+    "grunt": "~0.4",
     "grunt-cli": "~0.1.6",
-    "grunt-sed": "0.1.0",
-    "grunt-exec": "0.4.0rc1",
-    "grunt-contrib-watch": "0.2.0rc7",
-    "grunt-contrib-jshint": "0.1.1rc6",
-    "grunt-contrib-uglify": "0.1.1rc6",
-    "grunt-contrib-jasmine": "0.3.1rc7"
+    "grunt-sed": "~0.1",
+    "grunt-exec": "~0.4",
+    "grunt-contrib-watch": "~0.2",
+    "grunt-contrib-jshint": "~0.1",
+    "grunt-contrib-uglify": "~0.1",
+    "grunt-contrib-jasmine": "~0.3"
   },
   "scripts": {
     "test": "grunt test"
